# bondar

./: .gitignore  README.md  pyproject.toml
chat/: consumers.py  routing.py  urls.py  views.py
chat/migrations/: 0001_initial.py  0002_initial.py  0002_roomjoin.py  0003_message.py  0004_room_room_name.py  0005_remove_room_room_name.py
chat/models/: __init__.py  message.py  room.py  room_join.py
chat/services/: chat_room_service.py  message_service.py
config/: asgi.py  settings.py  urls.py
like/: urls.py  views.py
point/: admin.py  api.py  models.py  schema.py  views.py
point/migrations/: 0001_initial.py  0002_initial.py
recommend/: urls.py  views.py
static/css/: chat.css  chatting.css  like.css  point.css  signin.css  signup.css  start_base.css
static/js/: point.js  profile.js  room.js
static/style/: styles.css
templates/: base.html  main.html  test.html
templates/chat/: chat.html  index.html  room.html  room_index.html
templates/components/: both_like_user_card.html  header.html  i_hate_user_card.html  i_like_user_card.html  like_me_user_card.html  main_user_card.html  picture_list.html  side_nav.html  user_card.html
templates/point/: test.html
templates/profile/: profile.html  test.html  update_image.html  update_profile.html
templates/recommend/: both_like.html  i_hate.html  i_like.html  ilike.html  like_me.html
templates/user/: email.html  intro.html  register.html  signin.html  signup.html  start_base.html
user/: models.py  urls.py  utils.py  views.py
user/migrations/: 0001_initial.py  (+1 more)
userprofile/: models.py  urls.py  views.py
(+12 files in other folders)
