[tool.poetry]
name = "bondar"
version = "0.1.0"
description = ""
authors = ["Elijahrong <nhkim5760@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
django-ninja = "0.17.0"
black = "21.12b0"
django-stubs = "1.9.0"
mypy = "0.931"
isort = "5.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
